Particle weight edit mode is not supported #57931

Closed
opened 2018-11-19 12:38:36 +01:00 by Sergey Sharybin · 5 comments

System Information

Debian Buster 64bit, GTX1080 390.87

Blender Version

Broken: b0c463a274
Worked: never, at least never good and probably never in 2.8 branch.

Short description of error

You cant' edit weights in particle edit mode.

This is most likely a drawing issue, since the brush seems to be modifying the values. Hard to tell for sure though without visual feedback.

Exact steps for others to reproduce the error

Open attached file and see it's shaded using strands direction. Should be something similar to 2.79 shading.
hair_weight.blend

**System Information** Debian Buster 64bit, GTX1080 390.87 **Blender Version** Broken: b0c463a274 Worked: never, at least never good and probably never in 2.8 branch. **Short description of error** You cant' edit weights in particle edit mode. This is most likely a drawing issue, since the brush seems to be modifying the values. Hard to tell for sure though without visual feedback. **Exact steps for others to reproduce the error** Open attached file and see it's shaded using strands direction. Should be something similar to 2.79 shading. [hair_weight.blend](https://archive.blender.org/developer/F5635535/hair_weight.blend)
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-11-26 11:05:50 +01:00
Member

@fclem, this is for you as well, right?

@fclem, this is for you as well, right?

This issue was referenced by 32ab0647a5

This issue was referenced by 32ab0647a53c16420993ca49563580cd48ac99af

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57931
No description provided.